--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <p id="status">Awaiting TF.js load</p>
 
-<video id="webcam" autoplay></video>
+<video id="camera--view" autoplay playsinline></video>
 <canvas id="canvas_no_display" style="display: none"></canvas>
 <button id="enableCam">Enable Webcam</button>
 <p id="detail-distance"></p>
@@ -19,6 +19,7 @@
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.11.0/dist/tf.min.js" type="text/javascript"></script>
 
 <!-- Import the page's JavaScript to do some stuff -->
+<script src="js/app.js"></script>
 <script type="module" src="js/script.js"></script>
 </body>
 </html>
